started top right container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,7 @@ header {
     background: linear-gradient(#4169e1, #8641E1);
 }
 
+#presetCities {
+    display: flex;
+    align-content: column;
+}
