--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,9 @@
-* {
-    margin: 10px;
-    padding: 5px;
-}
-
 header {
     display: flex;
     justify-content: center;
     background: linear-gradient(#4169e1, #8641E1);
+    padding: 15px;
 }
-
-/* .row {
-    white-space: pre-wrap;
-} */
-
-/* .sidesearch {
-    display: flex;
-    flex-direction: column;
-    /* doesnt work */
-    /* width: 300px;
-} */
 
 #searchBtn {
     width: 300px;
@@ -30,6 +15,7 @@ header {
 #searchTitle {
     font-size: 2em;
     font-weight: bold;
+    padding: 10px;
 }
 
 #cityInput {
@@ -38,41 +24,40 @@ header {
 
 .cityNames {
     width: 300px;
+    margin-bottom: 15px;
+    padding: 10px;
+    background-color: darkgray;
+    border-radius: 10px;
 }
 
-/* .weatherbox {
-    border: 2px solid black;
-    line-height: 40px;
-} */
-.response-container {
+
+#response-container {
     margin-bottom: 15px;
 }
 
-/* .forecast {
-    display: flex;
-    justify-content: flex-end;
-} */
-
-/* .fiveDayForecast {
-    display: flex;
-    flex-direction: row;
-} */
-
 .card {
     width: 100%;
+    padding: 15px;
 }
+
+.info {
+    margin-top: 7px;
+    display: block;
+}
+
+.cityDate {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.weatherbox {
+    padding: 15px;
+}
+
 
 .day {
     background-color: rgb(54, 54, 92);
     color: white;
+    padding: 15px;
+    margin-right: 20px;
 }
-
-/* .sidebar, #presetCities {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-} */
-
-/* .weatherbox {
-    
-} */
